--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,12 +84,25 @@ body {
   background-position-y: 1%;
   min-height: 100vh;
   width: 100%;
-  position: relative; /* Cambiado a relative para que los elementos internos se centren correctamente */
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
 
 }
+
+.home-background-mob {
+  background-image: url('/shiva_mobile.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 
 /* FONDO TODO */
 .auth-background {
@@ -134,6 +147,18 @@ body {
   position: absolute;
   top: 90px;
   left: 212px;
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.4);
+  cursor: pointer;
+}
+
+.ball-mob {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  background: radial-gradient(circle at 30% 30%, rgb(59 87 164 / 90%), rgb(47 11 68 / 50%) 40%, rgb(0 225 243 / 30%) 60%, rgb(176 10 196 / 20%) 80%, #000 100%);
+  position: absolute;
+  top: 135px;
+  left: 37px;
   box-shadow: 0 20px 30px rgba(0, 0, 0, 0.4);
   cursor: pointer;
 }
