:zap: Adapt to mobile device

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -114,6 +114,23 @@ body {
   min-height: 100vh;
 }
 
+.auth-background::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url('/FONDO.png');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  transform: translateZ(0);
+  z-index: -1;
+  filter: blur(2px); /* Ajusta según necesites */
+  opacity: 0.8; /* Para mejorar la suavidad */
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
