--- a/src/ui/portal/userprofile/sideSphere.module.css
+++ b/src/ui/portal/userprofile/sideSphere.module.css
@@ -27,6 +27,8 @@
   box-shadow: inset 2px 4px 15px rgba(101, 21, 78, 0.6), 
               0 5px 10px rgba(0, 0, 0, 0.2);
   z-index: 1;
+  outline: none; /* Eliminar el borde de enfoque */
+  box-shadow: none; /* Eliminar la sombra de enfoque */
 }
 
 .symbol {
@@ -64,6 +66,19 @@
   pointer-events: none;
 }
 
+.sideSphere:focus {
+  outline: none; /* Asegura que no haya borde azul cuando se enfoca */
+}
+
+.sideSphere:focus-visible {
+  outline: none; /* Asegura que no haya borde azul cuando se enfoca visiblemente */
+}
+
+.sideSphere:focus, .sideSphere:focus-visible, .sideSphere:active {
+  outline: none;
+  box-shadow: none;
+}
+
 /* OVERLAY */
 .overlay {
   position: fixed;
@@ -86,6 +101,7 @@
   z-index: 20; /* Asegurarse de que el menú esté por delante del overlay */
 }
 
+
 /* SIDESPHERE */
 .subSphere {
   width: 100px;
@@ -100,6 +116,9 @@
   box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5), 0 10px 15px rgba(0, 0, 0, 0.3);
   z-index: 1;
   font-size: 15px;
+    /* Otros estilos aquí */
+    outline: none; /* Elimina el borde azul */
+    border: none; /* Asegura que no haya ningún borde */
 }
 
 .subSphere::before {
